Use local plugin config.json

--- a/provision/roles/docker-registry/tasks/main.yml
+++ b/provision/roles/docker-registry/tasks/main.yml
@@ -164,6 +164,11 @@
     src: "{{ workdir }}/minio_config/config.json"
     dest: "secrets"
 
+- name: Fetch cvmfs key
+  fetch:
+    src: "/etc/cvmfs/keys/{{ ansible_fqdn }}.pub"
+    dest: "secrets"
+
 - name: Enable minio webhook
   patch:
     src: "minio-config.json.patch"
