--- a/provision/roles/docker-registry/tasks/main.yml
+++ b/provision/roles/docker-registry/tasks/main.yml
@@ -185,3 +185,15 @@
   script: setup_minio_webhook.sh "{{ workdir }}/minio_config/config.json"
   environment:
     PATH: "{{ workdir }}/bin:{{ ansible_env.PATH }}"
+
+- name: Open firewall
+  firewalld:
+    port: "{{ item }}"
+    permanent: true
+    state: disabled
+    immediate: true
+  with_items:
+    - 80/tcp
+    - 443/tcp
+    - 5000/tcp
+    - 9000/tcp
