Fix plugin config.json settable fields

--- a/data/plugin-config.json
+++ b/data/plugin-config.json
@@ -45,7 +45,7 @@
 	  "Destination": "/minio_ext_config",
 	  "Type": "none",
 	  "Options": ["bind", "ro"],
-	  "Settable": ["Source"]
+	  "Settable": ["source"]
 	}
   ],
   "Network": {"type": "host"}
