--- a/data/thin_dockerfile_run/Dockerfile
+++ b/data/thin_dockerfile_run/Dockerfile
@@ -1,3 +1,3 @@
 FROM thin_scratch
-ADD ubuntu_cvmfs-2.4.x_rootfs.tar.bz2 /
+ADD ubuntu_cvmfs-2.4.x_rootfs-2.tar.bz2 /
 RUN bash -c "echo hello > /something"
