--- a/data/plugin-config.json
+++ b/data/plugin-config.json
@@ -1,8 +1,8 @@
 {
-  "Description": "__binary__ graphdriver as a plugin",
+  "Description": "CernVM-FS graphdriver as a plugin",
   "Documentation": "-",
   "Entrypoint": [
-    "/usr/local/bin/__binary__"
+    "/usr/local/bin/entrypoint.sh"
   ],
   "Interface": {
     "Socket": "plugin.sock",
