--- a/ci/container/Makefile
+++ b/ci/container/Makefile
@@ -5,7 +5,7 @@
 IMAGE_NAME = cvmfs-graphdriver-plugin
 IMAGE_ARCH = amd64
 IMAGE_DISTRO = stretch
-IMAGE_VERSION = 0.1
+IMAGE_VERSION = 0.2
 IMAGE_TARBALL = $(IMAGE_NAME)-$(IMAGE_VERSION).tar.bz2
 CVMFS_VERSION = 2.4.1
 CVMFS_RELEASE = 1+debian9.1
@@ -17,7 +17,7 @@ GRAPHDRIVER_OVERLAY2_VERSION = 0.1
 CVMFS_BASE_URL = https://ecsft.cern.ch/dist/cvmfs/cvmfs-$(CVMFS_VERSION)
 CVMFS_CONFIG_BASE_URL = https://ecsft.cern.ch/dist/cvmfs/cvmfs-config
 GRAPHDRIVER_AUFS_BASE_URL = https://ecsft.cern.ch/dist/cvmfs/docker-graphdriver/aufs_cvmfs
-GRAPHDRIVER_OVERLAY2_BASE_URL = https://ecsft.cern.ch/dist/cvmfs/docker-graphdriver/aufs_cvmfs
+GRAPHDRIVER_OVERLAY2_BASE_URL = https://ecsft.cern.ch/dist/cvmfs/docker-graphdriver/overlay2_cvmfs
 
 GIT_SRC = ../src
 CVMFS_SRC = $(CVMFS_BASE_URL)/cvmfs_$(CVMFS_VERSION)~$(CVMFS_RELEASE)_$(IMAGE_ARCH).deb
@@ -39,8 +39,8 @@ $(IMAGE_TARBALL): $(ROOTFS)/CONTENTS $(MANIFEST)
 	rm -rf $(IMAGE_NAME)-$(IMAGE_VERSION)
 
 $(ROOTFS)/CONTENTS: $(ROOTFS)/usr/bin/cvmfs2 \
-  $(ROOTFS)/usr/local/bin/cvmfs_aufs \
-  $(ROOTFS)/usr/local/bin/cvmfs_overlay2 \
+  $(ROOTFS)/usr/local/bin/aufs_cvmfs \
+  $(ROOTFS)/usr/local/bin/overlay2_cvmfs \
   $(ROOTFS)/usr/local/bin/entrypoint.sh
 	cat /dev/null > $(ROOTFS)/.cvmfs.deb
 	cat /dev/null > $(ROOTFS)/.cvmfs-config.deb
@@ -48,7 +48,7 @@ $(ROOTFS)/CONTENTS: $(ROOTFS)/usr/bin/cvmfs2 \
 	echo "Image version:            $(IMAGE_VERSION)" >> $@
 	echo "Git revision:             $(shell cd $(GIT_SRC) && git rev-parse HEAD)" >> $@
 	echo "Debian distribution:      $(IMAGE_DISTRO)" >> $@
-	echo "CernVM-FS configuration:  $(CVMFS_CONFIG_SRC)" >> $@
+	echo "CernVM-FS client:         $(CVMFS_CONFIG_SRC)" >> $@
 	echo "CernVM-FS version:        $(CVMFS_SRC)" >> $@
 	echo "AUFS graph driver:        $(GRAPHDRIVER_AUFS_SRC)" >> $@
 	echo "Overlay2 graph driver:    $(GRAPHDRIVER_OVERLAY2_SRC)" >> $@
@@ -56,7 +56,10 @@ $(ROOTFS)/CONTENTS: $(ROOTFS)/usr/bin/cvmfs2 \
 $(ROOTFS)/.done_minbase:
 	mkdir $(IMAGE_NAME)-$(IMAGE_VERSION)
 	fakechroot fakeroot debootstrap --variant=minbase $(IMAGE_DISTRO) $(ROOTFS)
-	fakechroot fakeroot chroot $(ROOTFS) ln -sf /bin/kmod /sbin/modprobe
+	ln -sf /bin/kmod $(ROOTFS)/sbin/modprobe
+	ln -sf /lib/x86_64-linux-gnu/ld-2.24.so $(ROOTFS)/lib64/ld-linux-x86-64.so.2
+	ln -sf /run $(ROOTFS)/var/run
+	mkdir $(ROOTFS)/var/run/cvmfs
 	touch $(ROOTFS)/.done_minbase
 
 $(MANIFEST): $(ROOTFS)/.done_minbase
@@ -76,11 +79,11 @@ $(ROOTFS)/usr/bin/cvmfs2: | $(ROOTFS)/.cvmfs-config.deb $(ROOTFS)/.cvmfs.deb
 	fakechroot fakeroot chroot $(ROOTFS) dpkg -i .cvmfs.deb || true
 	fakechroot fakeroot chroot $(ROOTFS) apt-get install -fy
 
-$(ROOTFS)/usr/local/bin/cvmfs_aufs: $(ROOTFS)/.done_minbase
+$(ROOTFS)/usr/local/bin/aufs_cvmfs: $(ROOTFS)/.done_minbase
 	curl -o $@ $(GRAPHDRIVER_AUFS_SRC)
 	chmod +x $@
 
-$(ROOTFS)/usr/local/bin/cvmfs_overlay2: $(ROOTFS)/.done_minbase
+$(ROOTFS)/usr/local/bin/overlay2_cvmfs: $(ROOTFS)/.done_minbase
 	curl -o $@ $(GRAPHDRIVER_OVERLAY2_SRC)
 	chmod +x $@
 
