fix image creation script

--- a/ci/container/Makefile
+++ b/ci/container/Makefile
@@ -80,6 +80,7 @@ $(ROOTFS)/usr/bin/cvmfs2: | $(ROOTFS)/.cvmfs-config.deb $(ROOTFS)/.cvmfs.deb
 	ln -s /run $(ROOTFS)/var/run
 	mkdir $(ROOTFS)/var/run/cvmfs
 	chmod 0755 $(ROOTFS)/bin/mount
+	chmod 0755 $(ROOTFS)/bin/umount
 	chmod 0755 $(ROOTFS)/bin/fusermount
 
 $(ROOTFS)/usr/local/bin/aufs_cvmfs: $(ROOTFS)/.done_minbase
