--- a/shuttle/cvmfs-portal@.service
+++ b/shuttle/cvmfs-portal@.service
@@ -12,7 +12,7 @@ Type=simple
 ExecStart=/usr/bin/cvmfs_runas ${CVMFS_PORTAL_USER} \
   /usr/bin/cvmfs_minio server \
   --config-dir /etc/cvmfs/repositories.d/%i \
-  --address 127.0.0.1:${CVMFS_PORTAL_PORT} \
+  --address :${CVMFS_PORTAL_PORT} \
   ${CVMFS_PORTAL_SPOOL_DIR}
 
 [Install]
